table overflow fix #2

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,6 +55,7 @@ th, td {
 th {
     background-color: #f2f2f2;
     font-weight: bold;
+    font-size: 12px;
 }
 
 tr:last-child td {
